# clean_architecture_boilerplate

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
conf/: requirements.txt
