[tool.poetry]
name = "clean_architecture_boilerplate"
version = "0.1.0"
description = ""
authors = ["Miguel Toledano <a_niupi_byy@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sentry-sdk = "^0.14.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
